--- a/.kitchen.yml
+++ b/.kitchen.yml
@@ -5,13 +5,13 @@ driver:
 provisioner:
   name: chef_solo
   data_bags_path: data_bags
-  require_chef_omnibus: 11.18.6-1
+  require_chef_omnibus: 11.18.12-1
 
 platforms:
   - name: centos-6.5
 
 suites:
-  - name: 0.12.6
+  - name: 0.17.2
     driver:
       network:
         - ["forwarded_port", {guest: 4567, host: 4567}]
@@ -20,25 +20,29 @@ suites:
       - recipe[uchiwa-sensu::client]
     attributes:
       sensu:
-        version: "0.12.6-4"
+        version: "0.17.2-1"
         use_embedded_ruby: true
+        yum_repo_url: "http://repos.sensuapp.org"
         rabbitmq:
           host: "127.0.0.1"
         api:
           host: "0.0.0.0"
+          user: "admin"
+          password: "secret"
       yum:
         erlang_solutions:
           baseurl: "http://packages.erlang-solutions.com/rpm/centos/6/$basearch"
-  - name: 0.17.2
+  - name: 0.20.6
     driver:
       network:
-        - ["forwarded_port", {guest: 4567, host: 4569}]
+        - ["forwarded_port", {guest: 4567, host: 4568}]
+        - ["forwarded_port", {guest: 5671, host: 5671}]
     run_list:
       - recipe[uchiwa-sensu::server]
       - recipe[uchiwa-sensu::client]
     attributes:
       sensu:
-        version: "0.17.2-1"
+        version: "0.20.6-1"
         use_embedded_ruby: true
         rabbitmq:
           host: "127.0.0.1"
@@ -49,19 +53,19 @@ suites:
       yum:
         erlang_solutions:
           baseurl: "http://packages.erlang-solutions.com/rpm/centos/6/$basearch"
-  - name: 0.20.3
+  - name: 0.20.6-bis
     driver:
       network:
-        - ["forwarded_port", {guest: 4567, host: 4568}]
+        - ["forwarded_port", {guest: 4567, host: 4569}]
     run_list:
-      - recipe[uchiwa-sensu::server]
-      - recipe[uchiwa-sensu::client]
+      - recipe[sensu::default]
+      - recipe[sensu::api_service]
     attributes:
       sensu:
-        version: "0.20.3-1"
+        version: "0.20.6-1"
         use_embedded_ruby: true
         rabbitmq:
-          host: "127.0.0.1"
+          host: "10.73.0.10"
         api:
           host: "0.0.0.0"
           user: "admin"
